更新 next.config.ts 文件以排除 app-build-manifest.json，添加 workbox-webpack-plugin 依赖，并调整 Service Worker 的安装逻辑以删除缓存中的 app-build-manifest 文件。同时，更新相关的 package.json 和 pnpm-lock.yaml 文件以反映这些更改。

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "idb": "^8.0.2",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -23,7 +24,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "next-pwa": "^5.6.0",
+    "next-pwa": "5.6.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
